tests/errors/well-formed/invalid-attributes.fil
#[invalid_attribute]
comp main<'G: 1>() -> () {}