tests/errors/well-formed/invalid-attributes.expect
---CODE---
1
---STDERR---
Error: Failed to parse  --> tests/errors/well-formed/invalid-attributes.fil:1:3
  |
1 | #[invalid_attribute]
  |   ^---------------^
  |
  = Found unknown attribute flag "invalid_attribute": 
Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
